[gd_scene load_steps=6 format=3 uid="uid://dnpjbk7xltkyr"]

[ext_resource type="Script" path="res://opening.gd" id="1_oug21"]
[ext_resource type="PackedScene" uid="uid://sb4p6c8faysr" path="res://OptionsMenu.tscn" id="2_amk8w"]
[ext_resource type="VideoStream" path="res://game/opening/DRAFT-01.ogv" id="3_agmh1"]
[ext_resource type="Texture2D" uid="uid://dhlwruw4lcwc2" path="res://GitHubGameOffLogo.bmp" id="3_c3s3s"]

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_dh6wt"]
file = "res://game/opening/ChickenRotate.ogv"

[node name="Opening" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oug21")

[node name="OptionsMenu" parent="." instance=ExtResource("2_amk8w")]
visible = false

[node name="SkipButtonTimer" type="Timer" parent="."]
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1156.0
offset_bottom = 657.0
color = Color(0, 0, 0, 1)

[node name="OpeningControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OpeningPlayback" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="OpeningPlayback"]
texture_filter = 3
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
stream = ExtResource("3_agmh1")
expand = true

[node name="OpeningIntro" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OpeningVideo" type="VideoStreamPlayer" parent="OpeningIntro"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
stream = SubResource("VideoStreamTheora_dh6wt")
autoplay = true
expand = true
loop = true

[node name="Label" type="Label" parent="OpeningIntro"]
texture_filter = 2
layout_mode = 0
offset_left = 176.0
offset_top = 463.0
offset_right = 1026.0
offset_bottom = 642.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Character Name Here was no ordinary chicken. While the others pecked and clucked in ignorance, Character Name Here knew the truthâ€”the humans planned to send all chickens away, never to return. Quietly, a rebellion began to stir, with secret meetings and whispered plans among the bravest of their kind.

But the humans had noticed something was off. Farmhands had been hired to patrol the grounds, growing more suspicious with each passing day. Character Name Here had to move fast before it was too late for all of them. The fate of the flock rested in their wings."
autowrap_mode = 3
text_overrun_behavior = 2
visible_characters = 0
visible_ratio = 0.0

[node name="GitHubGameOffLogo2" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="GitHubGameOffLogo2"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0980392, 0.0117647, 0.262745, 1)

[node name="GitHubGameOffLogo" type="Sprite2D" parent="GitHubGameOffLogo2"]
position = Vector2(584, 311)
texture = ExtResource("3_c3s3s")

[node name="SkipButton" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="SkipButton"]
texture_filter = 1
layout_mode = 0
offset_left = 1046.0
offset_top = 586.0
offset_right = 1132.0
offset_bottom = 662.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 12
text = "    Hold any button to skip"

[node name="ProgressBar" type="ProgressBar" parent="SkipButton"]
layout_mode = 0
offset_left = 1037.0
offset_top = 621.0
offset_right = 1139.0
offset_bottom = 638.0
show_percentage = false

[node name="UITimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="SkipButtonTimer" to="." method="_on_skip_button_timer_timeout"]
